# birds

./: .gitignore  .readthedocs.yaml  CITATION.cff  Dockerfile  README.md  README1.md  Tutorial.ipynb  Tutorial2_DataExtraction.ipynb  Tutorial2_SpectrumMeasures.ipynb  Tutorial3_SyntheticSongs.ipynb  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  references.bib  requirements.txt  search.html  searchindex.js  test.ipynb
.doctrees/: environment.pickle
.doctrees/contents/: SpectrumMeasures.doctree
.github/workflows/: docs.yml  main.yml
_autosummary/: wavesongs.data.html  wavesongs.data.xc.html  wavesongs.html  wavesongs.models.bird.html  wavesongs.models.html  wavesongs.objs.html  wavesongs.objs.song.html  wavesongs.objs.syllable.html  wavesongs.optimizer.html  wavesongs.plot.html  wavesongs.utils.html  wavesongs.utils.paths.html  wavesongs.utils.tools.html
_modules/: index.html
_modules/wavesongs/: optimizer.html  plot.html
_modules/wavesongs/data/: xc.html
_modules/wavesongs/models/: bird.html
_modules/wavesongs/objs/: song.html  syllable.html
_modules/wavesongs/utils/: paths.html  tools.html
assets/results/mg_params/: 574179401-ZonotrichiaCapensis-0-mg.csv  synth-574179401-ZonotrichiaCapensis-0-curves.csv  synth_574179401-ZonotrichiaCapensis-0-curves.csv  synth_574179401-ZonotrichiaCapensis-0-mg.csv
birdsongs/: __init__.py  optimizer.py  paths.py  plotter.py  syllable.py  util.py  version.py
contents/: DownloadSamples.html  Installation.html  PhysicalModel.html  SpectrumMeasures.html  SyntheticSongs.html
docs/: conf.py  index.rst  readme.rst.1  references.bib  requirements.txt  wavesongs.rst
docs/_autosummary/: wavesongs.model.optimizer.rst  wavesongs.models.bird.rst  wavesongs.obj.rst  wavesongs.objects.syllable.rst  wavesongs.rst  wavesongs.utils.tools.rst
docs/_templates/autosummary/: class.rst.1
docs/contents/: Installation.md  PhysicalModel.md  README.md  SpectrumMeasures.ipynb
docs/references/: articles.bib  others.bib  references.bib  software.bib
docs/source/: conf.py  index.md  index.rst.1  modules.rst  wavesongs.rst  wavesongs.utils.rst
docs/source/_autosummary/: wavesongs.data.download.rst  wavesongs.objects.rst  wavesongs.objects.song.rst  wavesongs.utils.rst
tutorials/: Birdsong.ipynb  Data_Augmentation.ipynb  Motor_Gestures.ipynb  Syllable.ipynb
wavesongs/: __init__.py  obj.py  objs.py.1  optimizer.py  plot.py  test copy.ipynb
wavesongs/data/: __init__.py  download.py  xc.py
wavesongs/model/: bird.py  optimizer.py
wavesongs/models/: __init__.py  bird.py
wavesongs/objects/: __init__.py  song.py  syllable.py
wavesongs/objs/: __init__.py  song.py  syllable.py
wavesongs/utils/: __init__.py  paths.py  plots.py  tools.py
