[tool.poetry]
name = "birdsongs"
version = "1.1.0"
description = "Python packing of the physical model motor gestures to characterize and create birdsongs"
authors = ["saguileran <saguileran@unal.edu.co>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
numpy = "<2.0"
librosa = "^0.10.2.post1"
lmfit = "^1.3.1"
scipy = "^1.14.0"
sympy = "^1.12.1"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
mpl-pan-zoom = "^1.0.0"
mpl-point-clicker = "^0.4.1"
peakutils = "^1.3.5"
scikit-learn = "^1.5.0"
scikit-maad = "^1.4.2"
ipython = "^8.26.0"
ffmpeg = "^1.4"
ipympl = "^0.9.4"
plotly = "^5.22.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
