[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "wavesongs"
version = "0.0.6b1"
description = "A python package for birdsongs creation and data extraction."
license = "GPL-3.0"
authors = [
    { name = "saguileran@unal.edu.co", email = "saguileran@unal.edu.co" },
]
maintainers = [
    { name = "saguileran@unal.edu.co", email = "saguileran@unal.edu.co" },
]
keywords = [ "numerical methods", "motor gestures", "birdsongs", "syhnthetic songs" ]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "llvmlite (>=0.44.0,<0.45.0)",
    "librosa (>=0.10.2.post1,<0.11.0)",
    "numpy (==2.1.3)",
    "matplotlib (==3.9.0)",
    "ffmpeg (>=1.4,<2.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "mpl-pan-zoom (>=1.0.0,<2.0.0)",
    "mpl-point-clicker (>=0.4.1,<0.5.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "peakutils (>=1.3.5,<2.0.0)",
    "sympy (>=1.13.3,<2.0.0)",
    "scikit-maad (>=1.4.3,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "ipympl (>=0.9.6,<0.10.0)",
    "notebook (>=7.3.2,<8.0.0)"
]
dynamic = [ "classifiers" ]

[tool.poetry]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
homepage = "https://wavesongs.github.io/"
repository = "https://github.com/wavesongs/wavesongs/"
documentation = "https://wavesongs.github.io/wavesongs/"

[project.optional-dependencies]
dev = [
    "ipykernel",
    "black",
    "poetry"
]
test = ["pytest >= 7"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
poetry = "^2.0.1"
black = "^25.1.0"
myst-nb = "^1.2.0"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.1"
sphinxcontrib-bibtex = "^2.6.3"
pydata-sphinx-theme = "^0.15.2"
sphinx-book-theme = "^1.1.2"
sphinx-togglebutton = "^0.3.2"
